# Oncolake

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  feasibility.ipynb  metrics.json  params.yaml  pyproject.toml
logs/: endpoint_benchmark.md
pipelines/: stage_curate.py  stage_features.py  stage_ingest.py  stage_train.py
scripts/: bench_api.py  build_features.py  check_minio.py  ingest.py  ingest_fast.py
scripts/logs/: comparison.md  ingest.json  ingest_fast.json
src/oncolake/: bench.py  config.py  schemas.py  storage.py
src/oncolake/api/: main.py
src/oncolake/config/: settings.py
src/oncolake/curate/: build.py
src/oncolake/features/: extract.py  extract_fast.py  staging.py
src/oncolake/ingest/: alphafold.py  fast.py  run.py  uniprot.py
src/oncolake/lake/: storage.py  warehouse.py
src/oncolake/ml/: train.py
tests/: feasibility.ipynb  test_features.py
